# rich-gradient-cli

./: .gitignore  README.md  example.md  mkdocs.yml  pyproject.toml  sample.md
docs/: api.md  commands.md  index.md  usage.md
docs/styles/: extra.css  style.css
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/commands/: index.html
site/search/: search_index.json
site/styles/: style.css
site/usage/: index.html
src/rich_gradient_cli/: __init__.py  __main__.py  common.py  help.py  markdown_command.py  panel_command.py  rule_command.py  text_command.py
tests/: test_cli.py  test_common.py
typings/typer/: __init__.pyi
