[project]
name = "rich-gradient-cli"
version = "0.1.0"
description = "CLI for printing text in gradient color using the rich-gradient library."
readme = "README.md"
authors = [
    { name = "Maxwell Ludden", email = "maxludden@me.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.21.1",
    "rich>=14.3.2",
    "rich-color-ext>=0.1.9",
    "rich-gradient>=0.3.9",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.15.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.3",
    "mkdocstrings-python>=2.0.2",
]

[project.scripts]
gradient = "rich_gradient_cli:entrypoint"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.10"
mypy_path = "typings"
files = ["src", "typings"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
target-version = "py310"
src = ["src", "typings"]

[tool.pylint.messages_control]
disable = [
    "import-error",
    "unused-argument",
    "W0613"
]
